--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "eslint-plugin-promise": "^3.5.0",
         "eslint-plugin-standard": "^3.0.1",
         "node-sass": "^4.7.2",
-        "sass-loader": "^6.0.6"
+        "sass-loader": "^6.0.6",
+        "svg-sprite-loader": "^3.4.1"
     }
 }
