--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "precommit": "npm run lint"
     },
     "dependencies": {
-        "nuxt": "^1.0.0-rc11"
+        "nuxt": "^1.0.0-rc11",
+        "vue-text-mask": "^5.2.0"
     },
     "devDependencies": {
         "babel-eslint": "^7.2.3",
